# monkey-rust

./: .gitignore  CONTRIBUTORS  Cargo.toml  LICENSE  README.md  rust-toolchain
examples/: hash.mk  map-reduce.mk
lib/: monkey.rs
lib/evaluator/: builtins.rs  environment.rs  mod.rs  object.rs
lib/lexer/: mod.rs  token.rs
lib/parser/: ast.rs  mod.rs
parser/: Cargo.toml  README.md
parser/src/: lib.rs  parser.rs
repl/: main.rs  repl.rs
src/: .main.rs.swp  cmd.rs  main.rs
tests/: monkey_test.rs
