[package]
name = "monkey-rust"
version = "0.3.0"
authors = ["Jérôme Mahuet <jerome.mahuet@gmail.com>"]

[lib]
name = "monkey_lib"
path = "lib/monkey.rs"

[[bin]]
name = "monkey_repl"
path = "repl/main.rs"

[[bin]]
name = "monkey_exe"
path = "src/main.rs"

[dependencies]
nom = "^4.0.0"
clap = "~2.31.2"
rustyline = "7.1.0"
rustyline-derive = "0.4.0"
