[package]
name = "monkey-rust"
version = "0.5.0"
authors = ["Jérôme Mahuet <jerome.mahuet@gmail.com>"]
edition = "2021"

[lib]
name = "monkey_lib"
path = "lib/monkey.rs"

[[bin]]
name = "monkey_repl"
path = "repl/main.rs"

[[bin]]
name = "monkey_exe"
path = "src/main.rs"

[dependencies]
nom = "^7.1.1"
clap = "~2.31.2"
rustyline = "9.1.2"
rustyline-derive = "0.6.0"
